# guacamole-server-windows

./: .gitignore  CMakeLists.txt  README.md
common/: CMakeLists.txt  Makefile.in
common/include/common/: blank_cursor.h  clipboard.h  cursor.h  display.h  dot_cursor.h  ibar_cursor.h  iconv.h  io.h  json.h  list.h  pointer_cursor.h  rect.h  string.h  surface.h
common/src/: blank_cursor.c  clipboard.c  cursor.c  display.c  dot_cursor.c  ibar_cursor.c  iconv.c  io.c  json.c  list.c  pointer_cursor.c  recording.c  rect.c  string.c  surface.c
config/: guac_config.json
dependencies/Cairo/NO_VERSION/lib/Release/x64/MSVC_ALL_VERSIONS/: cairo.lib
dependencies/FreeRDP/v1.0.0/lib/Release/x64/MSVC_14.0/: freerdp-cache.lib  freerdp-channels.lib  freerdp-codec.lib  freerdp-core.lib  freerdp-gdi.lib  freerdp-rail.lib  freerdp-utils.lib
dependencies/FreeRDP/v1.1.0/ORIG/include/freerdp/: version.h
dependencies/FreeRDP/v1.1.0/include/winpr/: sysinfo.h
dependencies/FreeRDP/v1.1.0/lib/Release/Win32/MSVC_14.0/: freerdp-cache.lib  freerdp-client.lib  freerdp-codec.lib  freerdp-common.lib  freerdp-core.lib  freerdp-crypto.lib  freerdp-gdi.lib  freerdp-locale.lib  freerdp-primitives.lib  freerdp-rail.lib  freerdp-utils.lib  wfreerdp-client.lib  winpr-asn1.lib  winpr-bcrypt.lib  winpr-credentials.lib  winpr-credui.lib  winpr-crt.lib  winpr-crypto.lib  winpr-dsparse.lib  winpr-environment.lib  winpr-error.lib  winpr-file.lib  winpr-handle.lib  winpr-heap.lib  winpr-input.lib  winpr-interlocked.lib  winpr-io.lib  winpr-library.lib  winpr-makecert-tool.lib  winpr-path.lib  winpr-pipe.lib  winpr-pool.lib  winpr-registry.lib  winpr-rpc.lib  winpr-sspi.lib  winpr-synch.lib  winpr-sysinfo.lib  winpr-thread.lib  winpr-utils.lib
dependencies/FreeRDP/v1.1.0/lib/Release/x64/MSVC_14.0/: freerdp-cache.lib  freerdp-client.lib  freerdp-codec.lib  freerdp-common.lib  freerdp-core.lib  freerdp-crypto.lib  freerdp-gdi.lib  freerdp-locale.lib  freerdp-primitives.lib  freerdp-rail.lib  freerdp-utils.lib  freerdp.lib  wfreerdp-client.lib  winpr-asn1.lib  winpr-bcrypt.lib  winpr-credentials.lib  winpr-credui.lib  winpr-crt.lib  winpr-crypto.lib  winpr-dsparse.lib  winpr-environment.lib  winpr-error.lib  winpr-file.lib  winpr-handle.lib  winpr-heap.lib  winpr-input.lib  winpr-interlocked.lib  winpr-io.lib  winpr-library.lib  winpr-makecert-tool.lib  winpr-path.lib  winpr-pipe.lib  winpr-pool.lib  winpr-registry.lib  winpr-rpc.lib  winpr-sspi.lib  winpr-synch.lib  winpr-sysinfo.lib  winpr-thread.lib  winpr-utils.lib  (+1 more)
dependencies/OpenSSL/v1.0.2l/lib/Release/x64/MSVC_ALL_VERSIONS/: libeay32.lib  libeay32MT.lib  ssleay32.lib  (+1 more)
guacservice/: CMakeLists.txt
guacservice/config/: guac_config.json
guacservice/include/guacservice/: GuacClientProcess.h  GuacClientProcessHandler.h  GuacClientProcessHandlerMap.h  GuacClientProcessHandlerMapObserver.h  GuacClientProcessSocketedHandler.h  GuacClientUser.h  GuacConfig.h  GuacConfigParser.h  GuacConnection.h  GuacConnectionHandler.h  GuacConnectionNotifier.h  GuacConnectionSSLSocket.h  GuacConnectionTCPSocket.h  GuacDefines.h  GuacLogger.h  GuacService.h  IGuacClientProcessHandlerMapObserver.h  IGuacConnectionNotifier.h  IGuacConnectionSocket.h
guacservice/src/: GuacClientProcess.cpp  GuacClientProcessHandler.cpp  GuacClientProcessHandlerMap.cpp  GuacClientProcessRunner.cpp  GuacClientProcessSocketedHandler.cpp  GuacClientUser.cpp  GuacConfig.cpp  GuacConfigParser.cpp  GuacConnection.cpp  GuacConnectionHandler.cpp  GuacConnectionSSLSocket.cpp  GuacConnectionTCPSocket.cpp  GuacLogger.cpp  GuacService.cpp  GuacServiceRunner.cpp
libguac/: CMakeLists.txt  Makefile.in
libguac/include/guacamole/: atomicops.h  audio-fntypes.h  audio.h  client-fntypes.h  client.h  config.h  encode-jpeg.h  encode-png.h  encode-webp.h  error.h  id.h  layer.h  object.h  palette.h  parser.h  plugin.h  pool.h  protocol.h  raw_encoder.h  readerwriterqueue.h  rwlock.h  rwlockimpl.h  socket-fntypes.h  socket.h  stream.h  timestamp.h  user-fntypes.h  user-handlers.h  user.h
libguac/src/: audio.c  client.c  encode-jpeg.c  encode-png.c  encode-webp.c  error.c  hash.c  id.c  palette.c  parser.c  pool.c  protocol.c  raw_encoder.c  socket-boost-file.c  socket-boost-tcp.c  socket-broadcast.c  socket-fd.c  socket-iostream.c  socket-named-pipe.c  socket-nest.c  socket-shared-memory.c  socket-tee.c  socket.c  timestamp.c  unicode.c  user-handlers.c  user.c
protocols/: CMakeLists.txt
protocols/rdp/: CMakeLists.txt  Makefile.am  Makefile.in
protocols/rdp/include/rdp/: audio_input.h  client.h  dvc.h  keyboard.h  ptr_string.h  rdp.h  rdp_bitmap.h  rdp_cliprdr.h  rdp_color.h  rdp_disp.h  rdp_fs.h  rdp_gdi.h  rdp_glyph.h  rdp_keymap.h  rdp_pointer.h  rdp_print_job.h  rdp_rail.h  rdp_settings.h  rdp_status.h  rdp_stream.h  rdp_svc.h
protocols/rdp/include/rdp/compat/: client-cliprdr.h  rail.h  winpr-stream.h  winpr-wtypes.h
protocols/rdp/include/rdp/guac_ai/: ai_messages.h  ai_service.h
protocols/rdp/include/rdp/guac_rdpdr/: rdpdr_fs_messages.h  rdpdr_fs_messages_dir_info.h  rdpdr_fs_messages_file_info.h  rdpdr_fs_messages_vol_info.h  rdpdr_fs_service.h  rdpdr_messages.h  rdpdr_printer.h  rdpdr_service.h
protocols/rdp/include/rdp/guac_rdpsnd/: rdpsnd_messages.h  rdpsnd_service.h
protocols/rdp/include/rdp/guac_svc/: svc_service.h
protocols/rdp/keymaps/: generate.pl
protocols/rdp/src/: audio_input.c  client.c  dvc.c  input.c  keyboard.c  ptr_string.c  rdp.c  rdp_bitmap.c  rdp_cliprdr.c  rdp_color.c  rdp_disp.c  rdp_fs.c  rdp_gdi.c  rdp_glyph.c  rdp_keymap.c  rdp_pointer.c  rdp_print_job.c  rdp_rail.c  rdp_settings.c  rdp_stream.c  rdp_svc.c  resolution.c  unicode.c  user.c
protocols/rdp/src/compat/: winpr-stream.c
protocols/rdp/src/guac_ai/: ai_messages.c  ai_service.c
protocols/rdp/src/guac_rdpdr/: rdpdr_fs_messages.c  rdpdr_fs_messages_dir_info.c  rdpdr_fs_messages_file_info.c  rdpdr_fs_messages_vol_info.c  rdpdr_fs_service.c  rdpdr_messages.c  rdpdr_printer.c  rdpdr_service.c
protocols/rdp/src/guac_rdpsnd/: rdpsnd_messages.c  rdpsnd_service.c
protocols/rdp/src/guac_svc/: svc_service.c
(+84 files in other folders)
